[workspace]
members = [
    "totality",             # manages everything inbetween
    "totality-sys",         # io + render
    "totality-physics",     # physics sim
    "totality-model",       # loader + combiner for data models for io, render, and physics
    "totality-threading",   # threading
    # "totality-math",        # simple maths for when nalgebra is just too goddamn fucking bitchy about things
]
