[workspace]
members = [
    "totality",             # manages everything inbetween and serves as a reference implementation
    # Reliant on one or more of the children libs
    "totality-gui",         # gui library independent of totality-render, but is able to be tightly integrated with it
    "totality-render",      # renderer, attach a separate backend later on for ray-traced version
    "totality-sim",         # physics sim, extensible with any update function
    "totality-io",          # io, since it's needed by gui + other things
    # Technically wholly independent, but designed to be used together
    "totality-events",      # Eventing system + hal for mouse, keyboard, etc
    "totality-sync",        # to place a few sync primitives beyond the standard library
    "totality-model",       # loader + combiner for data models for io, render, and physics
    "totality-threading",   # threading
    # "totality-math",        # simple maths tbi(mplemented) for when nalgebra is gets too goddamn fucking bitchy about things
]

[profile.dev]
panic = "abort"

[profile.bench]
panic = "abort"

