[package]
name = "totality-gui"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

[dependencies.ext-events]
package = "totality-events"
path = "../totality-events"
[dependencies.geom]
package = "totality-model"
path = "../totality-model"
[dependencies]
quick-xml = "0.14.0"
lazy_static = "1.3.0"
log = "0.4.6"

