[package]
name = "totality-io"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

# Own, base independents
[dependencies.internal-events]
package = "totality-events"
path = "../totality-events"
[dependencies.th]
package = "totality-threading"
path = "../totality-threading"
# imports
[dependencies]
winit = "0.19.1"
log = "0.4.6"
[dependencies.na]
package = "nalgebra"
version = "0.29.0"

