[package]
name = "totality-render"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

[dependencies]
totality-threading = { path = "../totality-threading" }
totality-model = { path = "../totality-model" }
wgpu-hal = "0.11.0"
winit = "0.19.1"
nalgebra = "0.18.0"
image = "0.21.1"
log = "0.4.6"
simple_logger = "1.2.0"
arrayvec = "0.4.10"
shaderc = "0.5.0"

[dependencies.gfx-backend-vulkan]
version = "0.2.0"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.2.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2.0"
optional = true

[features]
default = ["vulkan"]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

