[package]
name = "totality-render"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

[dependencies.th]
package = "totality-threading"
path = "../totality-threading"

[dependencies.model]
package = "totality-model"
path = "../totality-model"

[dependencies.na]
package = "nalgebra"
version = "0.32"

[dependencies.img]
package = "image"
version = "0.24"

[dependencies]
log = "0.4"
simple_logger = "2"

# Utility
tap = "1"
bytemuck = "1"

# Error handling
thiserror = "1"

# graphics dependencies
[dependencies.winit]
version = "0.29"
default-features = false
# features = ["rwh_06", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]
features = ["rwh_06", "x11"]
[dependencies.raw-window-handle]
version = "0.6"
[dependencies.vulkano]
# version = "0.34"
git = "https://github.com/vulkano-rs/vulkano.git"
[dependencies.vulkano-shaders]
# version = "0.34"
git = "https://github.com/vulkano-rs/vulkano.git"
