[package]
name = "totality-sim"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

[dependencies.th]
package = "totality-threading"
path = "../totality-threading"
[dependencies.geom]
package = "totality-model"
path = "../totality-model"
[dependencies]
log = "0.4.6"
[dependencies.na]
package = "nalgebra"
version = "0.29.0"
