[package]
name = "totality-sync"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

[features]
default = []
old = []
sub = []
fna = []
dummy = []

[dependencies]
crossbeam = "0.7.1"
log = "0.4.6"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "my_bench"
harness = false

