[package]
name = "totality-sync"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

[features]
default = ["fna"]
old = []
sub = []
fna = []
dummy = []

[dependencies]
crossbeam = "0.8.1"
log = "0.4.14"

[dev-dependencies]
criterion = "0.3.5"
testbench = "0.8"

[[bench]]
name = "my_bench"
harness = false

