[package]
name = "totality-sync"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

[features]
default = ["fna_usize"]
old = []
sub = []
fna = []
fna_usize = []
dummy = []

[dependencies]
crossbeam = "0.8.1"
log = { version = "0.4.14", features = ["release_max_level_off"] }

[dev-dependencies]
criterion = "0.3.5"
testbench = "0.8"

[[bench]]
name = "triple_buffer_lib"
harness = false

