[package]
name = "totality"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2018"

[dependencies]
# Own, intermediary dependents
totality-render = { path = "../totality-render" }
totality-sim = { path = "../totality-sim" }
# Own, base independents
totality-io = { path = "../totality-io" }
totality-model = { path = "../totality-model" }
totality-threading = { path = "../totality-threading" }
# imports
gfx-hal = "0.1.0"
winit = "0.18.1"
nalgebra = "0.18"
num_cpus = "1.0"
image = "*"
crossbeam = "0.5"
log = "0.4.0"
simple_logger = "1.0"
arrayvec = "0.4.10"
syn = "0.15.32"
quote = "0.6"

