[package]
name = "totality"
version = "0.1.0"
authors = ["AlterionX <ben.benjamin.ben@gmail.com>"]
edition = "2021"

[dependencies]
# Own, intermediary dependents
totality-render = { path = "../totality-render" }
totality-sim = { path = "../totality-sim" }
totality-io = { path = "../totality-io" }
totality-gui = { path = "../totality-gui" }
# Own, base independents
totality-events = { path = "../totality-events" }
totality-model = { path = "../totality-model" }
totality-threading = { path = "../totality-threading" }
totality-sync = { path = "../totality-sync" }
# imports
nalgebra = "0.32"
log = "0.4.6"
simple_logger = "1.2.0"
arrayvec = "0.4.10"

